// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog style > Matches enter snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: inherit;
  margin: auto;
  width: 500px;
  background-color: var(--background);
  border-radius: var(--border-radius);
  border: none;
  padding: 0;
  overflow: hidden;
  -webkit-transform: translateY(100vh);
  -moz-transform: translateY(100vh);
  -ms-transform: translateY(100vh);
  transform: translateY(100vh);
  -webkit-transition: -webkit-transform 1s ease;
  transition: transform 1s ease;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.emotion-0::backdrop {
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  -webkit-transition: opacity 1s ease;
  transition: opacity 1s ease;
  cursor: pointer;
}

@media screen and (max-width: 800px) {
  .emotion-0 {
    max-width: 100%;
    max-height: 75%;
    margin: auto auto 0px auto;
    border-radius: var(--border-radius) var(--border-radius) 0px 0px;
  }
}

.emotion-0::backdrop {
  opacity: 1;
}

<div>
  <dialog
    class="emotion-0 emotion-1"
  />
</div>
`;

exports[`Dialog style > Matches idle snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: inherit;
  margin: auto;
  width: 500px;
  background-color: var(--background);
  border-radius: var(--border-radius);
  border: none;
  padding: 0;
  overflow: hidden;
  -webkit-transform: translateY(100vh);
  -moz-transform: translateY(100vh);
  -ms-transform: translateY(100vh);
  transform: translateY(100vh);
  -webkit-transition: -webkit-transform 1s ease;
  transition: transform 1s ease;
}

.emotion-0::backdrop {
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  -webkit-transition: opacity 1s ease;
  transition: opacity 1s ease;
  cursor: pointer;
}

@media screen and (max-width: 800px) {
  .emotion-0 {
    max-width: 100%;
    max-height: 75%;
    margin: auto auto 0px auto;
    border-radius: var(--border-radius) var(--border-radius) 0px 0px;
  }
}

<div>
  <dialog
    class="emotion-0 emotion-1"
  />
</div>
`;

exports[`Helpers > ModalContent renders a div and matches snapshot 1`] = `
.emotion-0 {
  overflow-y: auto;
  padding: 20px;
}

.emotion-0 h2,
.emotion-0 h3,
.emotion-0 h4,
.emotion-0 h5,
.emotion-0 h6 {
  font-weight: 500;
}

.emotion-0 hr {
  height: 1px;
  background-color: #efdddd57;
  border: none;
  margin: 5px;
}

.emotion-0>p {
  margin-bottom: 10px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Test Content
  </div>
</div>
`;

exports[`Helpers > ModalTitle renders an h1 and matches snapshot 1`] = `
.emotion-0 {
  text-align: center;
  padding: 20px;
}

.emotion-0>* {
  background: transparent;
  border: none;
  color: inherit;
  font-size: inherit;
}

.emotion-0>*:focus {
  outline: none;
}

<div>
  <h1
    class="emotion-0 emotion-1"
  >
    Test Title
  </h1>
</div>
`;
